--- a/pages/bicicletas.html
+++ b/pages/bicicletas.html
@@ -11,12 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
    
 </head>
 <body>
-    <header>
+    <!-- <header>
         <div class="contenedor">
-            <a class="logo" href="../index.html">MENDOBIKES</a>
+            <a class="logo" href="./index.html">MENDOBIKES</a>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar"></label>
             <nav class="menu">
@@ -26,12 +27,41 @@
                 <a href="../pages/contacto.html">CONTACTO</a>
             </nav>
         </div>
-    </header>
-    
+    </header> -->
+
+
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">MENDOBIKES</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/bicicletas.html">Bicicletas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/equipamiento.html">Equipamiento</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/eventos.html">Eventos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+
+
+
     <!-- pagina original -->
 
-
-    <h2 id="comparacion" >Comparacion de bicicletas</h2>
+<!-- TABLA -->
+    <!-- <h2 id="comparacion" >Comparacion de bicicletas</h2>
 
     <table border="1" cellpadding="10" class="tabla">
         <tr>
@@ -58,8 +88,55 @@
             <td><b>Street</b></td>
             <td>Asfalto y tierra (circuito o pump track)</td>
             <td>Pequeñas y livianas, ideales para saltos y trucos</td>
-        </tr>
+        </tr> -->
 
+<!-- FOTOS BICILETAS -->
+    <!-- </table>
+    <div class="fotos">
+        <div class="dh">
+            <img src="../img/sueltas/bici dh.jpg" alt="Bicicleta Dh">
+            <p>Bicicleta Dh</p>
+        </div>
+        <div class="ruta">
+        <img src="../img/sueltas/bici ruta.jpg" alt="Bicicleta de Ruta">
+        <p>Bicicleta de Ruta</p>
+        </div>
+        <div class="ebike">
+        <img src="../img/sueltas/e bike.jpg" alt="Bicicleta electrica E-Bike">
+        <p>Bicicleta electrica E-Bike</p>
+        </div>
+        <div class="dirt">
+        <img src="../img/sueltas/dirt.jpg" alt="Bicicleta street o dirt jump">
+        <p>Bicicleta street o dirt jump</p>
+        </div>
+    </div>
+ -->
+
+
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../img/sueltas/bici dh.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../img/sueltas/bici ruta.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../img/sueltas/e bike.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../img/sueltas/dirt.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     </table>
     <div class="fotos">
@@ -81,6 +158,8 @@
         </div>
     </div>
 
+
+
     <footer>
         <div class="contenedor">
             <p class="copy">Copyright &reg; 2016-<script type="text/javascript">document.write(new Date().getFullYear());</script> mendobikes.com - Todos los derechos reservados.</p>
@@ -91,5 +170,8 @@
             </div>
         </div>
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
