--- a/pages/equipamiento.html
+++ b/pages/equipamiento.html
@@ -11,12 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
    
 </head>
 <body>
-    <header>
+    <!-- <header>
         <div class="contenedor">
-            <a class="logo" href="../index.html">MENDOBIKES</a>
+            <a class="logo" href="./index.html">MENDOBIKES</a>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar"></label>
             <nav class="menu">
@@ -26,76 +27,100 @@
                 <a href="../pages/contacto.html">CONTACTO</a>
             </nav>
         </div>
-    </header>
-
+    </header> -->
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">MENDOBIKES</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/bicicletas.html">Bicicletas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/equipamiento.html">Equipamiento</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/eventos.html">Eventos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <!-- EMPIEZA PAG EQUIPAMIENTO -->
 
-<h2 id="equipamiento">Equipamiento</h2>
+    <h2 id="equipamiento">Equipamiento</h2>
 
-<div class="desplegable">
-    <ul>
-        <li><a href="../pages/equipamiento.html">TODAS LAS CATEGORIAS</a>
-            <ul>
-                <li><a href="../pages/equipamiento.html">CASCOS</a></li>
-                <li><a href="../pages/equipamiento.html">GUANTES</a></li>
-                <li><a href="../pages/equipamiento.html">ZAPATILLAS</a></li>
-                <li><a href="../pages/equipamiento.html">INDUMENTARIA</a></li>
-                <li><a href="../pages/equipamiento.html">LENTES</a></li>
-                <li><a href="../pages/equipamiento.html">MOCHILAS</a></li>
-            </ul>
-        </li>
-    </ul>
-</div>
-
-<div class="fotos">
-    <div class="casco">
-        <img src="../Img/fotos equipamiento/casco.jpg" alt="casco">
-        <p>CASCOS</p>
+    <div class="desplegable">
+        <ul>
+            <li><a href="../pages/equipamiento.html">TODAS LAS CATEGORIAS</a>
+                <ul>
+                    <li><a href="../pages/equipamiento.html">CASCOS</a></li>
+                    <li><a href="../pages/equipamiento.html">GUANTES</a></li>
+                    <li><a href="../pages/equipamiento.html">ZAPATILLAS</a></li>
+                    <li><a href="../pages/equipamiento.html">INDUMENTARIA</a></li>
+                    <li><a href="../pages/equipamiento.html">LENTES</a></li>
+                    <li><a href="../pages/equipamiento.html">MOCHILAS</a></li>
+                </ul>
+            </li>
+        </ul>
     </div>
-    <div class="guantes">
-    <img src="../Img/fotos equipamiento/guantes.jpg" alt="guantes">
-    <p>GUANTES</p>
-    </div>
-    <div class="zapatillas">
-    <img src="../Img/fotos equipamiento/zapatillas.jpg" alt="zapatillas">
-    <p>ZAPATILLAS</p>
-    </div>
-    <div class="indumentaria">
-    <img src="../Img/fotos equipamiento/indumentaria.jpg" alt="indumentaria">
-    <p>INDUMENTARIA</p>
-    </div>
-    <div class="lentes">
-    <img src="../Img/fotos equipamiento/lentes.jpg" alt="lentes">
-    <p>LENTES</p>
-    </div>
-    <div class="mochilas">
-    <img src="../Img/fotos equipamiento/mochila.jpg" alt="mochila">
-    <p>MOCHILA</p>
-    </div>
-</div>
 
-
-
-
-<div>
-    <h2 class="notas">Notas de interes</h2>
-    <h3 class="importancia">Importancia del uso de protecciones al momento de rodar</h3>
-        <p>&#128071;</p>
-        <a class="vinculo" href="https://www.deportescaneda.com/blog/8-por-que-es-importante-usar-casco-para-ciclismo-infografia" target="_blank">
-           <img src="../img/sueltas/casco-smith-mtb-mujer.jpg" alt="Casco">
-        </a>
-</div>
-
-<footer>
-    <div class="contenedor">
-        <p class="copy">Copyright &reg; 2016-<script type="text/javascript">document.write(new Date().getFullYear());</script> mendobikes.com - Todos los derechos reservados.</p>
-        <div class="sociales">
-            <a class="icon-twitter" href="#"></a>
-            <a class="icon-instagram" href="#"></a>
-            <a class="icon-facebook-squared" href="#"></a>               
+    <div class="fotos">
+        <div class="casco">
+            <img src="../Img/fotos equipamiento/casco.jpg" alt="casco">
+            <p>CASCOS</p>
+        </div>
+        <div class="guantes">
+        <img src="../Img/fotos equipamiento/guantes.jpg" alt="guantes">
+        <p>GUANTES</p>
+        </div>
+        <div class="zapatillas">
+        <img src="../Img/fotos equipamiento/zapatillas.jpg" alt="zapatillas">
+        <p>ZAPATILLAS</p>
+        </div>
+        <div class="indumentaria">
+        <img src="../Img/fotos equipamiento/indumentaria.jpg" alt="indumentaria">
+        <p>INDUMENTARIA</p>
+        </div>
+        <div class="lentes">
+        <img src="../Img/fotos equipamiento/lentes.jpg" alt="lentes">
+        <p>LENTES</p>
+        </div>
+        <div class="mochilas">
+        <img src="../Img/fotos equipamiento/mochila.jpg" alt="mochila">
+        <p>MOCHILA</p>
         </div>
     </div>
-</footer>
 
+
+
+
+    <div>
+        <h2 class="notas">Notas de interes</h2>
+        <h3 class="importancia">Importancia del uso de protecciones al momento de rodar</h3>
+            <p>&#128071;</p>
+            <a class="vinculo" href="https://www.deportescaneda.com/blog/8-por-que-es-importante-usar-casco-para-ciclismo-infografia" target="_blank">
+            <img src="../img/sueltas/casco-smith-mtb-mujer.jpg" alt="Casco">
+            </a>
+    </div>
+
+    <footer>
+        <div class="contenedor">
+            <p class="copy">Copyright &reg; 2016-<script type="text/javascript">document.write(new Date().getFullYear());</script> mendobikes.com - Todos los derechos reservados.</p>
+            <div class="sociales">
+                <a class="icon-twitter" href="#"></a>
+                <a class="icon-instagram" href="#"></a>
+                <a class="icon-facebook-squared" href="#"></a>               
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
