arreglo nav y scroll

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>         
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">MENDOBIKES</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -105,20 +105,23 @@
           </section> -->
  
           <div class="img-responsive">
-            <div>
+            <div class="img-contenedores">
               <img src="./img/index/recuadro 1 index.jpg" class="img-fluid" alt="">
-              <h2>Lorem ipsum dolor sit.</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, nobis.</p>
+              <h2>SINÓNIMO DE CONFORT Y CONTROL.</h2>
+              <p>¿Ya probaste la nueva RockHopper comp 29?</p>
+              <a href="./pages/bicicletas.html" class="btn btn-grey">Conocé más!</a>
             </div>
-            <div>
+            <div class="img-contenedores">
               <img src="./img/index/recuadro 2 index.jpg" class="img-fluid" alt="">
-              <h2>Lorem ipsum dolor sit.</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, nobis.</p>
+              <h2>LONG LIVE ORCA AERO.</h2>
+              <p> Nueva Orca Aero E-Bike. 28 combinaciones de manillar y potencia</p>
+              <a href="./pages/bicicletas.html" class="btn btn-grey">Conocé más!</a>
             </div>
-            <div>
+            <div class="img-contenedores">
               <img src="./img/index/recuadro 3 index.jpg" class="img-fluid" alt="">
-              <h2>Lorem ipsum dolor sit.</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores, nobis.</p>
+              <h2>NUEVA COLECCIÓN GRAVITY.</h2>
+              <p>Rápido, ahora es más rápido.</p>
+              <a href="./pages/bicicletas.html" class="btn btn-grey">Conocé más!</a>
             </div>          
           </div>
            
@@ -170,7 +173,7 @@
         <div class="fb-total">
           <div class="fb-content">
             <h2>¿Aún no conoces nuestro equipamiento?</h2>
-            <div class="fb-text">Vos disfrutá, nosotros nos encargamos de tu seguridad.</div>
+            <p class="fb-text">Vos disfrutá, nosotros nos encargamos de tu seguridad.</p>
               <ul class="fb-list">
                 <li><a href="./pages/equipamiento.html" class="btn btn-grey">Cascos</a></li>
                 <li><a href="./pages/equipamiento.html" class="btn btn-grey">Guantes</a></li>
