--- a/pages/equipamiento.html
+++ b/pages/equipamiento.html
@@ -28,7 +28,7 @@
             </nav>
         </div>
     </header> -->
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">MENDOBIKES</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,10 +53,20 @@
         </div>
       </nav>
     <!-- EMPIEZA PAG EQUIPAMIENTO -->
-
-    <h2 id="equipamiento">Equipamiento</h2>
-
-    <div class="desplegable">
+    <div class="header-equipamiento"> 
+      <h2 id="equipamiento">Equipamiento</h2>
+      <div>
+        <ul class="fb-list">
+          <li><a href="../pages/equipamiento.html" class="btn btn-grey">Cascos</a></li>
+          <li><a href="../pages/equipamiento.html" class="btn btn-grey">Guantes</a></li>
+          <li><a href="../pages/equipamiento.html" class="btn btn-grey">Zapatillas</a></li>
+          <li><a href="../pages/equipamiento.html" class="btn btn-grey">indumentaria</a></li>
+          <li><a href="../pages/equipamiento.html" class="btn btn-grey">Lentes</a></li>
+          <li><a href="../pages/equipamiento.html" class="btn btn-grey">Mochilas</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- <div class="desplegable">
         <ul>
             <li><a href="../pages/equipamiento.html">TODAS LAS CATEGORIAS</a>
                 <ul>
@@ -69,7 +79,7 @@
                 </ul>
             </li>
         </ul>
-    </div>
+    </div> -->
 
     <div class="fotos">
         <div class="casco">
@@ -97,10 +107,9 @@
         <p>MOCHILA</p>
         </div>
     </div>
-
-
-
-
+      
+    <!-- terminan fotos grid -->
+    
     <div>
         <h2 class="notas">Notas de interes</h2>
         <h3 class="importancia">Importancia del uso de protecciones al momento de rodar</h3>
