--- a/pages/bicicletas.html
+++ b/pages/bicicletas.html
@@ -30,7 +30,7 @@
     </header> -->
 
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">MENDOBIKES</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -138,7 +138,7 @@
       </button>
     </div>
 
-    </table>
+    <!-- </table>
     <div class="fotos">
         <div class="dh">
             <img src="../img/sueltas/bici dh.jpg" alt="Bicicleta Dh">
@@ -156,10 +156,136 @@
         <img src="../img/sueltas/dirt.jpg" alt="Bicicleta street o dirt jump">
         <p>Bicicleta street o dirt jump</p>
         </div>
+    </div> -->
+
+    <div class="titulo-bicicletas">
+      <h1>CONOCE TODA LA VARIEDAD QUE TENEMOS EN BICICLETAS!</h1>
+      <ul class="titulo-botones container-fluid">
+        <li><a href="./pages/bicicletas.html">Bicicleta Dh</a></li>
+        <li><a href="./pages/bicicletas.html">Bicicleta de Ruta</a></li>
+        <li><a href="./pages/bicicletas.html">Bicicleta electrica E-Bike</a></li>
+        <li><a href="./pages/bicicletas.html">Bicicleta street o dirt jump</a></li>
+    </ul>
     </div>
 
 
 
+
+
+<!-- empiezan CARDS -->
+    <div class="cards container-fluid">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="../img/imagenes bicicletas/enduro.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Specialized StumpJumper</h5>
+              <p class="card-text">$400.000</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">Añadir al Carrito!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../img/imagenes bicicletas/trial.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nueva Specialized Fat Bike! </h5>
+              <p class="card-text">$300.000</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">Añadir al Carrito!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../img/imagenes bicicletas/urbana ebike.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Urbana E-Bike!</h5>
+              <p class="card-text">$200.000</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">Añadir al Carrito!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../img/imagenes bicicletas/enduro.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Specialized StumpJumper</h5>
+              <p class="card-text">$400.000</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">Añadir al Carrito!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../img/imagenes bicicletas/trial.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nueva Specialized Fat Bike! </h5>
+              <p class="card-text">$300.000</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">Añadir al Carrito!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../img/imagenes bicicletas/urbana ebike.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Urbana E-Bike!</h5>
+              <p class="card-text">$200.000</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">Añadir al Carrito!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../img/imagenes bicicletas/enduro.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Specialized StumpJumper</h5>
+              <p class="card-text">$400.000</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">Añadir al Carrito!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../img/imagenes bicicletas/trial.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nueva Specialized Fat Bike! </h5>
+              <p class="card-text">$300.000</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">Añadir al Carrito!</a>
+            </div>
+          </div>
+        </div>
+        <div class="card h-100">
+          <img src="../img/imagenes bicicletas/urbana ebike.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Urbana E-Bike!</h5>
+            <p class="card-text">$200.000</p>
+          </div>
+          <div class="card-footer">
+            <a href="#">Añadir al Carrito!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- TERMINAN CARDS -->
+    
     <footer>
         <div class="contenedor">
             <p class="copy">Copyright &reg; 2016-<script type="text/javascript">document.write(new Date().getFullYear());</script> mendobikes.com - Todos los derechos reservados.</p>
