corrigiendo fotos que no se ven equipamiento y eventos

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="../img/2.jpg" alt="Logo de SLee Dw">
+                        <img src="./img/2.jpg" alt="Logo de SLee Dw">
                     </a>
                 </figure>
             </div>
