--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -56,7 +56,7 @@
             
             <div class="grideventos__producto">
                 <a class="grideventos__enlace" href="https://ucimastersworldchamps.com/" target="_blank"> 
-                    <img class="grideventos__imagen" src="../Img/fotos eventos/cerro bayo 1.jpg" alt="bayo">
+                    <img class="grideventos__imagen" src="../img/fotos eventos/cerro bayo 1.jpg" alt="bayo">
                     <p class="grideventos__texto">UCI Masters World Championship- Cerro Bayo.</p>
                 </a>
             </div>
