ultimas modificaciones para entrega final

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,14 +46,14 @@
     <section class="header__contacto">
         <div>
             <h1>Creando historias desde 1995</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum esse voluptatum fugit veniam, nostrum tempore beatae at neque error accusantium corrupti voluptatibus praesentium officia rem! Culpa quasi officia asperiores in.</p>
+            <p>Si hay algo que une a las personas que trabajan aquí, es esto: creemos que las bicicletas tienen el poder de cambiar vidas. Es por eso que siempre estamos buscando personas apasionadas de todas las disciplinas que compartan esta creencia y que busquen desempeñar un papel activo para inspirar y atraer a más personas en bicicleta. ¿Estás listo para hacer una diferencia?</p>
         </div>
     </section>
 
             <!-- foto central -->
     <section class="foto__contacto">
         <div class="card bg-dark text-white">
-            <img src="../img/fotos contacto/amigos.jpg" class="card-img" alt="amigos">
+            <img src="../img/fotos contacto/amigos.png" class="card-img" alt="amigos">
             <div class="card-img-overlay ">
             <h5 class="card-title h1">MENDOBIKES</h5>            
             <p class="card-text h4">La pasión por la montaña nos une</p>
