--- a/pages/equipamiento.html
+++ b/pages/equipamiento.html
@@ -63,27 +63,27 @@
     <section id="galeria" class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="../img/fotos equipamiento/casco.jpg" alt="fotos equipamiento">
+          <img src="../img/fotos equipamiento/casco-png.png" alt="fotos equipamiento">
           <p>Cascos</p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="../img/fotos equipamiento/guantes2.jpg" alt="fotos equipamiento">
+          <img src="../img/fotos equipamiento/guantes2-png.png" alt="fotos equipamiento">
           <p>Guantes</p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="../img/fotos equipamiento/indumentaria.jpg" alt="fotos equipamiento">
+          <img src="../img/fotos equipamiento/indumentaria-png.png" alt="fotos equipamiento">
           <p>Indumentaria</p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="../img/fotos equipamiento/lentes.jpg" alt="fotos equipamiento">
+          <img src="../img/fotos equipamiento/lentes-png.png" alt="fotos equipamiento">
           <p>Lentes</p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="../img/fotos equipamiento/mochila.jpg" alt="fotos equipamiento">
+          <img src="../img/fotos equipamiento/mochila-png.png" alt="fotos equipamiento">
           <p>Mochilas</p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="../img/fotos equipamiento/zapatillas2.jpg" alt="fotos equipamiento">
+          <img src="../img/fotos equipamiento/zapatillas2-png.png" alt="fotos equipamiento">
           <p>Zapatillas</p>
         </div>
       </div>
