--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -56,13 +56,13 @@
             
             <div class="grideventos__producto">
                 <a class="grideventos__enlace" href="https://ucimastersworldchamps.com/" target="_blank"> 
-                    <img class="grideventos__imagen" src="../img/fotos eventos/cerro bayo 1.jpg" alt="bayo">
+                    <img class="grideventos__imagen" src="../img/fotos eventos/cerro bayo 1-png.png" alt="bayo">
                     <p class="grideventos__texto">UCI Masters World Championship- Cerro Bayo.</p>
                 </a>
             </div>
             <div class="grideventos__producto">
                 <a class="grideventos__enlace" href="https://ucimastersworldchamps.com/" target="_blank"> 
-                    <img class="grideventos__imagen" src="../img/fotos eventos/foto 4 evento.jpeg" alt="bayo">
+                    <img class="grideventos__imagen" src="../img/fotos eventos/foto 4 evento-png.png" alt="bayo">
                     <p class="grideventos__texto">Montserrat cerro abajo 2021</p>
                 </a>
             </div>
@@ -74,19 +74,19 @@
             </div> 
             <div class="grideventos__producto">
                 <a class="grideventos__enlace" href="https://ucimastersworldchamps.com/" target="_blank"> 
-                    <img class="grideventos__imagen" src="../img/fotos eventos/uci 6.jpg" alt="bayo">
+                    <img class="grideventos__imagen" src="../img/fotos eventos/uci 6-png.png" alt="bayo">
                     <p class="grideventos__texto">UCI MTB Downhill 2022.</p>
                 </a>
             </div>
             <div class="grideventos__producto">
                 <a class="grideventos__enlace" href="https://ucimastersworldchamps.com/" target="_blank"> 
-                    <img class="grideventos__imagen" src="../img/fotos eventos/francia.jpg" alt="bayo">
+                    <img class="grideventos__imagen" src="../img/fotos eventos/francia-png.png" alt="bayo">
                     <p class="grideventos__texto">UCI Masters World Championship- Francia</p>
                 </a>
             </div>
             <div class="grideventos__producto">
                 <a class="grideventos__enlace" href="https://ucimastersworldchamps.com/" target="_blank"> 
-                    <img class="grideventos__imagen" src="../img/fotos eventos/valpo 2.jpg" alt="bayo">
+                    <img class="grideventos__imagen" src="../img/fotos eventos/valpo 2-png.png" alt="bayo">
                     <p class="grideventos__texto">Red Bull Valparaiso cerro abajo 2022</p>
                 </a>
             </div>
