--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/index/body/senderos.jpg" class="d-block w-100" alt="senderos">
+                <img src="./img/index/body/senderos-png.png" class="d-block w-100" alt="senderos">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Creando rutas</h5>
                   <p>Conoce los mejores senderos de montaña de Argentina</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/amigos.jpg" class="d-block w-100" alt="amigos">
+                <img src="./img/amigos-png.png" class="d-block w-100" alt="amigos">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>El MountainBike nos une</h5>
                   <p>Conoce las próximas salidas en tu localidad</p>
@@ -89,19 +89,19 @@
       <div>
           <div class="img-responsive">
             <div class="img-contenedores">
-              <img src="./img/index/recuadro 1 index.jpg" class="img-fluid" alt="responsive1">
+              <img src="./img/index/recuadro 1 index-png.png" class="img-fluid" alt="responsive1">
               <h2>SINÓNIMO DE CONFORT Y CONTROL.</h2>
               <p>¿Ya probaste la nueva RockHopper comp 29?</p>
               <a href="./pages/bicicletas.html" class="btn btn-grey">Conocé más!</a>
             </div>
             <div class="img-contenedores">
-              <img src="./img/index/recuadro 2 index.jpg" class="img-fluid" alt="responsive2">
+              <img src="./img/index/recuadro 2 index-png.png" class="img-fluid" alt="responsive2">
               <h2>LONG LIVE ORCA AERO.</h2>
               <p> Nueva Orca Aero E-Bike. 28 combinaciones de manillar y potencia</p>
               <a href="./pages/bicicletas.html" class="btn btn-grey">Conocé más!</a>
             </div>
             <div class="img-contenedores">
-              <img src="./img/index/recuadro 3 index.jpg" class="img-fluid" alt="responsive3">
+              <img src="./img/index/recuadro 3 index-png.png" class="img-fluid" alt="responsive3">
               <h2>NUEVA COLECCIÓN GRAVITY.</h2>
               <p>Rápido, ahora es más rápido.</p>
               <a href="./pages/bicicletas.html" class="btn btn-grey">Conocé más!</a>
@@ -109,7 +109,7 @@
           </div>
            
           <div class="foto-texto">
-            <img src="./img/index/orbea.jpg" class="img-fluid mx-auto d-block" width="90%"  alt="orbea">
+            <img src="./img/index/orbea-png.png" class="img-fluid mx-auto d-block" width="90%"  alt="orbea">
             <h1 class="foto-h1">Nueva doble propósito</h1>
             <div class="bc-text">Diversión en ruta y offroad con nuevo cuadro de carbono.</div>
             <p class="bc-link">
@@ -137,15 +137,15 @@
       
       <div class="img-responsive">
         <div class="img-contenedores">
-          <img src="./img/index/Pivot.jpg" class="img-fluid" alt="responsive1">
+          <img src="./img/index/Pivot-png.png" class="img-fluid" alt="responsive1">
           <h2>Pivot Enduro</h2>          
         </div>
         <div class="img-contenedores">
-          <img src="./img/index/SpecializedRuta.jpg" class="img-fluid" alt="responsive2">
+          <img src="./img/index/SpecializedRuta-png.png" class="img-fluid" alt="responsive2">
           <h2>Sepcialized S-Works</h2>        
         </div>
         <div class="img-contenedores">
-          <img src="./img/index/body/fat-bike.jpg" class="img-fluid" alt="responsive3">
+          <img src="./img/index/body/fat-bike-png.png" class="img-fluid" alt="responsive3">
           <h2>Fat Bike Specialized</h2>       
         </div>          
       </div>     
@@ -171,15 +171,15 @@
 
       <div class="img-responsive">
         <div class="img-contenedores">
-          <img src="./img/index/casco.jpg" class="img-fluid" alt="responsive1">
+          <img src="./img/fotos equipamiento/casco-png.png" class="img-fluid" alt="responsive1">
           <h2>Casco</h2>          
         </div>
         <div class="img-contenedores">
-          <img src="./img/index/indumentaria.jpg" class="img-fluid" alt="responsive2">
+          <img src="./img/fotos equipamiento/indumentaria-png.png" class="img-fluid" alt="responsive2">
           <h2>Indumentaria</h2>        
         </div>
         <div class="img-contenedores">
-          <img src="./img/index/lentes.jpg" class="img-fluid" alt="responsive3">
+          <img src="./img/fotos equipamiento/lentes-png.png" class="img-fluid" alt="responsive3">
           <h2>Lentes</h2>       
         </div>          
       </div>     
