--- a/pages/bicicletas.html
+++ b/pages/bicicletas.html
@@ -45,16 +45,16 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/sueltas/bici dh.jpg" class="d-block w-100" alt="...">
+          <img src="../img/sueltas/bici dh-png.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../img/sueltas/bici ruta.jpg" class="d-block w-100" alt="...">
+          <img src="../img/sueltas/bici ruta-png.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../img/sueltas/e bike.jpg" class="d-block w-100" alt="...">
+          <img src="../img/sueltas/e bike-png.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../img/sueltas/dirt.jpg" class="d-block w-100" alt="...">
+          <img src="../img/sueltas/dirt-png.png" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -82,7 +82,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4 container-fluid">
         <div class="col">
           <div class="card h-100">
-            <img src="../img/imagenes bicicletas/enduro.jpg" class="card-img-top" alt="BicicletaCard">
+            <img src="../img/imagenes bicicletas/enduro-png.png" class="card-img-top" alt="BicicletaCard">
             <div class="card-body">
               <h5 class="card-title">Specialized StumpJumper</h5>
               <p class="card-text">$400.000</p>
@@ -94,7 +94,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../img/imagenes bicicletas/trial.jpg" class="card-img-top" alt="BicicletaCard">
+            <img src="../img/imagenes bicicletas/trial-png.png" class="card-img-top" alt="BicicletaCard">
             <div class="card-body">
               <h5 class="card-title">Nueva Specialized Fat Bike! </h5>
               <p class="card-text">$300.000</p>
@@ -106,7 +106,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../img/imagenes bicicletas/urbana ebike.jpg" class="card-img-top" alt="BicicletaCard">
+            <img src="../img/imagenes bicicletas/urbana ebike-png.png" class="card-img-top" alt="BicicletaCard">
             <div class="card-body">
               <h5 class="card-title">Urbana E-Bike!</h5>
               <p class="card-text">$200.000</p>
@@ -118,7 +118,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../img/imagenes bicicletas/enduro.jpg" class="card-img-top" alt="BicicletaCard">
+            <img src="../img/imagenes bicicletas/enduro-png.png" class="card-img-top" alt="BicicletaCard">
             <div class="card-body">
               <h5 class="card-title">Specialized StumpJumper</h5>
               <p class="card-text">$400.000</p>
@@ -130,7 +130,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../img/imagenes bicicletas/trial.jpg" class="card-img-top" alt="BicicletaCard">
+            <img src="../img/imagenes bicicletas/trial-png.png" class="card-img-top" alt="BicicletaCard">
             <div class="card-body">
               <h5 class="card-title">Nueva Specialized Fat Bike! </h5>
               <p class="card-text">$300.000</p>
@@ -142,7 +142,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../img/imagenes bicicletas/urbana ebike.jpg" class="card-img-top" alt="BicicletaCard">
+            <img src="../img/imagenes bicicletas/urbana ebike-png.png" class="card-img-top" alt="BicicletaCard">
             <div class="card-body">
               <h5 class="card-title">Urbana E-Bike!</h5>
               <p class="card-text">$200.000</p>
@@ -154,7 +154,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../img/imagenes bicicletas/enduro.jpg" class="card-img-top" alt="BicicletaCard">
+            <img src="../img/imagenes bicicletas/enduro-png.png" class="card-img-top" alt="BicicletaCard">
             <div class="card-body">
               <h5 class="card-title">Specialized StumpJumper</h5>
               <p class="card-text">$400.000</p>
@@ -166,7 +166,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="../img/imagenes bicicletas/trial.jpg" class="card-img-top" alt="BicicletaCard">
+            <img src="../img/imagenes bicicletas/trial-png.png" class="card-img-top" alt="BicicletaCard">
             <div class="card-body">
               <h5 class="card-title">Nueva Specialized Fat Bike! </h5>
               <p class="card-text">$300.000</p>
@@ -177,7 +177,7 @@
           </div>
         </div>
         <div class="card h-100">
-          <img src="../img/imagenes bicicletas/urbana ebike.jpg" class="card-img-top" alt="BicicletaCard">
+          <img src="../img/imagenes bicicletas/urbana ebike-png.png" class="card-img-top" alt="BicicletaCard">
           <div class="card-body">
             <h5 class="card-title">Urbana E-Bike!</h5>
             <p class="card-text">$200.000</p>
