ultimos arreglos para entrega final

--- a/index.html
+++ b/index.html
@@ -17,32 +17,33 @@
     <meta name="keywords" content="Bicicletas, Deporte, Senderos, Montaña, Mendoza, Descenso, Enduro">
 </head>
 
-<body> <!-- navbar -->             
-      <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">MENDOBIKES</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./pages/bicicletas.html">Bicicletas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/equipamiento.html">Equipamiento</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/eventos.html">Eventos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
+<body> <!-- navbar -->    
+      <header>    
+        <nav class="navbar navbar-expand-lg bg-light fixed-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html">MENDOBIKES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./pages/bicicletas.html">Bicicletas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/equipamiento.html">Equipamiento</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/eventos.html">Eventos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
-      
+        </nav>
+      </header>    
 
       <!-- carousel -->
       <div>    
@@ -148,9 +149,7 @@
           <img src="./img/index/body/fat-bike-png.png" class="img-fluid" alt="responsive3">
           <h2>Fat Bike Specialized</h2>       
         </div>          
-      </div>     
-
-      <br>
+      </div>        
 
       <div>
         <div class="fb-total">
