--- a/pages/bicicletas.html
+++ b/pages/bicicletas.html
@@ -17,30 +17,32 @@
     <meta name="keywords" content="Enduro, Dh, Descenso, Ruta, Ciclismo, Carreras, Shimano, Suspensión">   
 </head>
 <body>   <!-- nav -->
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">MENDOBIKES</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/bicicletas.html">Bicicletas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/equipamiento.html">Equipamiento</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/eventos.html">Eventos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light fixed-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">MENDOBIKES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../pages/bicicletas.html">Bicicletas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/equipamiento.html">Equipamiento</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/eventos.html">Eventos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
       </nav>
+    </header>  
         <!-- carousel -->
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -74,7 +76,7 @@
         <li><a href="./pages/bicicletas.html">Bicicleta de Ruta</a></li>
         <li><a href="./pages/bicicletas.html">Bicicleta electrica E-Bike</a></li>
         <li><a href="./pages/bicicletas.html">Bicicleta street o dirt jump</a></li>
-    </ul>
+      </ul>
     </div>
     
 <!-- empiezan CARDS -->
