--- a/pages/equipamiento.html
+++ b/pages/equipamiento.html
@@ -17,32 +17,32 @@
     <meta name="keywords" content="Zapatillas, Remeras, Lentes, Camelback, Calzas">   
 </head>
 <body>
-    
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">MENDOBIKES</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/bicicletas.html">Bicicletas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/equipamiento.html">Equipamiento</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/eventos.html">Eventos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light fixed-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">MENDOBIKES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../pages/bicicletas.html">Bicicletas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/equipamiento.html">Equipamiento</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/eventos.html">Eventos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-    </nav>
-
+      </nav>
+    </header> 
       <!-- EMPIEZA PAG EQUIPAMIENTO -->
 
     <div class="header-equipamiento"> 
